# multitooner

./: .gitignore  pyproject.toml  readme.md
assets/: icon-desaturated.icns  icon.icns
assets/icon-assets/: multitooner.icns  readme.rtf
assets/icon-desaturated-assets/: icon-desaturated.icns
multitooner/: app.py  authenticate.py  config.py  login.py  main.py  preferences.py
script/: setup.py
tests/: test_multitooner.py
