[tool.poetry]
name = "MultiTooner"
version = "1.2.0"
description = ""
authors = ["Jake Brehm <jake.m.brehm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyobjc-framework-LaunchServices = "^6.2"
rumps = "^0.3.0"
tooner = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
